# lang-forge

./: .dockerignore  .gitattributes  .gitignore  .woodpecker.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.smoke.yml  go.mod
.github/workflows/: ci.yml
cmd/check-example-action-parity/: main.go  main_test.go
cmd/check-example-spec-parity/: main.go  main_test.go
cmd/lang-forge/: main.go
doc/: architecture.md  automata-and-tables.md  build-release.md  compiler-pipeline.md  encoding.md  example-template-guide.md  examples.md  generated-code-and-semantics.md  glossary.md  handwritten-integration-guide.md  invocation-and-layouts.md  learning-path.md  parser-algorithms.md  parser-error-recovery.md  release-checklist.md  requirements.md  specification.md  tool-improvement-roadmap.md  ucdt-legacy-inspiration.md  ucdt-reference.md  usage.md
examples/: README.md
examples/benchmarks/: Makefile  README.md
examples/c/: README.md
examples/cpp/: README.md
examples/csharp/: README.md
examples/go/: README.md
examples/mk/: c.mk  cpp.mk  csharp.mk  go.mk  langforge.mk
examples/parser-algorithms/: Makefile  README.md  lr1-not-slr-canonical.lf  lr1-not-slr-ielr.lf  lr1-not-slr-lalr.lf  lr1-not-slr-slr.lf  mysterious-conflict-canonical.lf  mysterious-conflict-ielr.lf  mysterious-conflict-lalr.lf
examples/templates/: README.md
examples/templates/cpp/layered-compiler/: CMakeLists.txt  Makefile  README.md  grammar.lf  input.mini
examples/templates/cpp/layered-compiler/include/mini/: ast.hpp  compiler.hpp  diagnostics.hpp  parser.hpp
examples/templates/cpp/layered-compiler/src/: compiler.cpp  diagnostics.cpp  main.cpp  parser.cpp
examples/templates/cpp/library-dsl/: CMakeLists.txt  Makefile  README.md  grammar.lf
examples/templates/cpp/library-dsl/include/library_dsl/: ast.hpp  parser_facade.hpp
examples/templates/cpp/library-dsl/src/: ast.cpp  diagnostics.cpp  diagnostics.hpp  main.cpp  parser_facade.cpp  semantics.cpp  semantics.hpp
examples/testdata/: README.md
internal/action/: manifest.go  manifest_test.go
internal/app/: app.go  app_test.go  verbosity.go
internal/diagnostics/: diagnostics.go
internal/lex/: automata.go  automata_test.go  fuzz_test.go  ranges.go  ranges_test.go  regex.go  regex_test.go  scanner.go
internal/parse/: grammar.go  grammar_test.go  lr1.go  slr.go  slr_test.go
internal/spec/: fuzz_test.go  (+3 more)
scripts/: build-image-tags.sh  check-example-cleanliness.sh  check-example-target-variable.sh  check-example-testdata.sh  check-golden-stability.sh  check-vocabulary.sh  install-lang-forge.sh
(+247 files in other folders)
